microservices_project/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oneingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: a14a0d78030da4003a4fdcf6cdc6ad1e-1529040942.ap-south-1.elb.amazonaws.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontendsrv
                port:
                  number: 80
          - path: /student
            pathType: Prefix
            backend:
              service:
                name: backendsrv
                port:
                  number: 8080
